# docker-image-cp

./: .gitignore  .pre-commit-config.yaml  README.md  docker_image_cp.py  pyproject.toml  test_docker_image_cp.py
